Bug 350737 - KMail/KF5 Blocking UI Call when Opening ODF Mail Attachement
Summary: KMail/KF5 Blocking UI Call when Opening ODF Mail Attachement
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-29 08:24 UTC by Andreas Cord-Landwehr
Modified: 2015-09-17 06:30 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Cord-Landwehr 2015-07-29 08:24:19 UTC
When opening a mail attachment that is e.g. xlsx, odt, ... which then opens LibreOffice, the KMail UI freezes until LibreOffice is closed again. This also happens with PDF attachments and the KF5 version of Okular.

(compiled git sources from yesterday)

Reproducible: Always
Comment 1 Laurent Montel 2015-07-29 11:52:28 UTC
I confirm it.
I don't have idea yet.
Comment 2 Gunter Ohrner 2015-09-02 15:22:46 UTC
I can also confirm this.

Additionally, I get an error dialog after closing LibreOffice with the title "Sorry" and the message text: "KDEInit could not launch '/usr/lib/x86_64-linux-gnu/libexec/kf5/kioexec'".
Comment 3 Gunter Ohrner 2015-09-02 15:23:34 UTC
Maybe this bug's status could be changed to "CONFIRMED" if also Laurent was able to reproduce it?
Comment 4 Johannes Studt 2015-09-08 19:25:56 UTC
Confirmed.

This happens with all attachments. The attachment opens, the UI is blocked.
After closing the attachment the error message "KDEInit could not launch '/usr/lib64/libexec/kf5/kioexec'" is displayed.
Comment 5 Laurent Montel 2015-09-14 11:50:37 UTC
Git commit ca27705bd161a64a6aa86c0c844036143eea24fb by Montel Laurent.
Committed on 14/09/2015 at 11:50.
Pushed by mlaurent into branch 'Applications/15.08'.

Fix Bug 350737 - KMail/KF5 Blocking UI Call when Opening ODF Mail Attachement

FIXED-IN: 15.08.2

M  +1    -3    messageviewer/viewer/viewer_p.cpp

http://commits.kde.org/kdepim/ca27705bd161a64a6aa86c0c844036143eea24fb
Comment 6 Gunter Ohrner 2015-09-15 10:42:02 UTC
Thanks, works!

Programs started by kMail to open attachments now display their window behind the kMail main window - can this have something to do with the way the application is invoked? Before, the viewer windows was displayed in front of the (blocked) kMail window.
Comment 7 Andreas Cord-Landwehr 2015-09-17 06:30:58 UTC
@Gunter: at least I cannot reproduce this behavior (invoked application behind kmail main window) on my system and the patch's changes should not cause such a behavior.
If the problem remains, please open a new bug report. Otherwise, your issue might be overlooked, here at the backlog of a fixed bug report.
Cheers, Andreas