Fix Bug 350737 - KMail/KF5 Blocking UI Call when Opening ODF Mail Attachement

FIXED-IN: 15.08.2
BUG: 350737